fix: enable native access for BLST JNI library on Java 22+
Java 22+ requires --enable-native-access=ALL-UNNAMED for JNI libraries.
The BLST cryptographic library uses JNI and was failing tests with
UnsatisfiedLinkError on Java 25.

Changes:
- Add --enable-native-access=ALL-UNNAMED to commonJvmOpts in flake.nix
- Pass JAVA_OPTS env var to forked test JVMs via ThisBuild setting
- Add explicit fallback in build.sbt for non-nix environments