@@ -42,6 +42,13 @@ Test / publishArtifact := false
 // BSP and semantic features
 ThisBuild / semanticdbEnabled := true
 
+// Pass JAVA_OPTS environment variable to forked test JVMs
+// This allows configuring test JVM options via flake.nix or shell environment
+ThisBuild / Test / javaOptions ++= sys.env.get("JAVA_OPTS").toSeq.flatMap(_.split("\\s+"))
+// Enable native access for BLST JNI library (required for Java 22+)
+// Explicit fallback for environments not using nix develop
+ThisBuild / Test / javaOptions += "--enable-native-access=ALL-UNNAMED"
+
 // Improve incremental compilation
 ThisBuild / incOptions := {
     incOptions.value
@@ -485,7 +492,7 @@ lazy val scalusDesignPatterns = project
       publish / skip := true,
       libraryDependencies += "org.scalatest" %%% "scalatest" % "3.2.19" % "test",
       libraryDependencies += "org.scalatestplus" %%% "scalacheck-1-18" % "3.2.19.0" % "test",
-      Test / fork := true,
+      Test / fork := true
       //// enable if need speedup
       // trackInternalDependencies := TrackLevel.TrackIfMissing,
     )
